Add caching to MtBdd construction.